--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,9 +46,9 @@ file(GLOB headers "${PROJECT_SOURCE_DIR}/include/[^.]*.hh")
 # Add the executable, and link it to the Geant4 libraries
 
 find_library(F2C_LIBRARIES libf2c.a) #must be static library for some reason
-message(STATUS "Lib file detected: [${F2C_LIBRARY}].")
+message(STATUS "Lib file detected: [${F2C_LIBRARIES}].")
 add_executable(EMMAapp EMMAapp.cc ${sources} ${headers})
-target_link_libraries(EMMAapp ${Geant4_LIBRARIES} ${ROOT_LIBRARIES} ${F2C_LIBRARY} )
+target_link_libraries(EMMAapp ${Geant4_LIBRARIES} ${ROOT_LIBRARIES} ${F2C_LIBRARIES} )
 
 #----------------------------------------------------------------------------
 # Copy all scripts to the build directory, i.e. the directory in which we
